--- a/MTOV_WebApp/Pages/Shared/_Layout.cshtml
+++ b/MTOV_WebApp/Pages/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                 <div class="col-md-6 text-end">
                     <p>
                         <i class="fas fa-info-circle me-1"></i>
-                        Built with ASP.NET Core MVC
+                        GrayDart &copy;
                     </p>
                 </div>
             </div>
